<resources>
    <string name="app_name">ChatChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_chat">Chat Chat</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email_or_mobile">Enter Email/User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here_sign_up">New Here? Sign Up</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="field_empty_error">This field cannot be empty</string>
    <string name="password_not_match_error">Password does not match</string>
    <string name="password_length_short_error">Password length must be minimum 8 character</string>
    <string name="invalid_mobile_error">Invalid mobile no</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="invalid_format_error">Invalid format</string>
    <string name="invalid_password_error">Invalid password</string>
    <string name="not_supported_profile_image">This image file not supported</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_image">Choose Image</string>
    <string name="camera_permission_denied">Camera permission denied, go to Settings->Permissions</string>
    <string name="gallery_permission_denied">Gallery permission denied, go to Settings->Permissions</string>
    <string name="no_image_found">No image found</string>
    <string name="sign_up_failed">Sign Up failed.</string>
    <string name="try_again">Try again.</string>
    <string name="log_in_failed">Log In failed.</string>
    <string name="image_file_error">Image file does not exists or file can\'t be read</string>
    <string name="chats">Chats</string>
    <string name="active_friends">Active Friends</string>
    <string name="friends">Friends</string>
    <string name="time">Time</string>
    <string name="send_message">Send Message</string>
    <string name="send_request">Send Request</string>
    <string name="friends_status">Friend Status</string>
    <string name="mutual_friends">Mutual Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="add_friends">Add Friends</string>
    <string name="my_friends">My Friends</string>
    <string name="enter_message">Enter Message</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac convallis ligula. Vivamus sed iaculis felis, et suscipit turpis. Vestibulum posuere enim quis orci fringilla blandit. Sed et viverra massa, sit amet pretium magna. Sed viverra dui non elementum scelerisque. Donec lacus ante, dignissim eu rutrum quis, lacinia sed tortor. Morbi quis erat at quam fermentum eleifend. Curabitur eu nulla leo. In vitae faucibus augue. Duis nec lacus ligula.</string>
</resources>