<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="@dimen/common_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/friendsProfilePic"
            android:layout_width="@dimen/common_60dp"
            android:layout_height="@dimen/common_60dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:background="@drawable/blue_circle"
            android:contentDescription="@string/profile_picture"
            android:tag="Default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/actionButton"
            android:layout_toEndOf="@id/friendsProfilePic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/friendsProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/common_20dp"
                android:text="@string/user_name"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/friendsEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/email" />

        </LinearLayout>

        <!--<de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chatIcon"
            android:layout_width="@dimen/common_40dp"
            android:layout_height="@dimen/common_40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/blue_circle"
            android:contentDescription="@string/chats"
            android:tag="Default" />-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/actionButton"
            android:layout_width="@dimen/common_40dp"
            android:layout_height="@dimen/common_40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/send_request"
            android:src="@drawable/ic_baseline_cancel_24"
            android:tag="Default"
            app:fabSize="mini" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>