<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/parentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="@dimen/common_30dp"
            android:layout_height="@dimen/common_30dp"
            android:layout_alignBottom="@id/messageLayout"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/common_10dp"
            android:background="@drawable/blue_circle"
            android:contentDescription="@string/profile_picture"
            android:tag="Default"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profilePic"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/messageTextCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/message_card_view_color"
                app:cardCornerRadius="@dimen/common_20dp">

                <TextView
                    android:id="@+id/messageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_10dp"
                    android:text="@string/send_message"
                    android:textSize="@dimen/text_size_16sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/messageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_10dp"
                android:text="@string/time"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

</layout>