<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textChooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/common_30dp"
        android:text="@string/choose_image"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChooseImage">

        <LinearLayout
            android:id="@+id/cameraButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/galleryButtonLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/common_30dp"
                android:layout_height="@dimen/common_30dp"
                android:layout_marginEnd="@dimen/common_10dp"
                android:contentDescription="@string/camera"
                android:src="@drawable/ic_baseline_camera_alt_24" />

            <TextView
                android:id="@+id/textButtonCamera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/camera"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/galleryButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cameraButtonLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/common_30dp"
                android:layout_height="@dimen/common_30dp"
                android:layout_marginEnd="@dimen/common_10dp"
                android:contentDescription="@string/gallery"
                android:src="@drawable/ic_baseline_gallery_24" />

            <TextView
                android:id="@+id/textButtonGallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/gallery"
                android:textSize="@dimen/text_size_16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_15dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>